[package]
name = "fx_communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = {version = "1.25.0",features = ["full"]}
tokio-util = {version = "0.7.5",features = ["full"]}
futures = "0.3"
tokio-serial = "5.4.4"

[dev-dependencies]

